[package]
name          = "lpt"
version       = "0.1.0"
edition       = "2021"
authors       = ["hinto.janai <hinto.janai@protonmail.com>"]
description   = "Low priority thread"
documentation = "https://docs.rs/lpt"
repository    = "https://github.com/hinto-janai/lpt"
readme        = "README.md"
keywords      = ["low", "priority", "thread"]
license       = "MIT"

[target.'cfg(unix)'.dependencies]
libc = { version = ">=0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = ">=0.51", features = ["Win32_System_Threading", "Win32_Foundation"] }
